--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
