--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/pdf-parse": "^1.1.5",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
@@ -30,6 +31,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "openai": "^5.10.1",
+    "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.3.93",
     "pg": "^8.16.3",
     "postgres": "^3.4.4",
